--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -303,7 +303,7 @@
 </style>
 
 <!-- Toolbar -->
-<div class="toolbar" role="banner">
+<div *ngIf="false" class="toolbar" role="banner">
   <img
     width="40"
     alt="Angular Logo"
@@ -325,7 +325,7 @@
     </a>
 </div>
 
-<div class="content" role="main">
+<div *ngIf="false" class="content" role="main">
 
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
@@ -475,6 +475,7 @@
 
 <!-- Pruebas con componentes -->
 <mi-componente></mi-componente>
+<form-view></form-view>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
