--- a/frontend/src/app/components/form-view/form-view.component.html
+++ b/frontend/src/app/components/form-view/form-view.component.html
@@ -1,74 +1,21 @@
 
-<h1 class="my-4">FORMULARIO BÁSICO</h1>
+<h1 MiDirectiva>FORMULARIO BÁSICO</h1>
 
-<mat-form-field appearance="fill">
-  <mat-label>Input</mat-label>
-  <input matInput>
-</mat-form-field>
-<mat-form-field appearance="fill">
-  <mat-label>Select</mat-label>
-  <mat-select>
-    <mat-option value="one">First option</mat-option>
-    <mat-option value="two">Second option</mat-option>
-  </mat-select>
-</mat-form-field>
-<mat-form-field appearance="fill">
-  <mat-label>Textarea</mat-label>
-  <textarea matInput></textarea>
-</mat-form-field>
-
-<form class="w-full max-w-sm">
-  <div class="md:flex md:items-center mb-6">
-    <div class="md:w-1/3">
-      <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-        Full Name
-      </label>
-    </div>
-    <div class="md:w-2/3">
-      <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-full-name" type="text" value="Jane Doe">
-    </div>
+<form [formGroup]="signupForm" (ngSubmit)="sendForm(signupForm.value)">
+  <div>
+    <input formControlName="name" type="text" placeholder="Introducir nombre">
   </div>
-  <div class="md:flex md:items-center mb-6">
-    <div class="md:w-1/3">
-      <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-password">
-        Password
-      </label>
-    </div>
-    <div class="md:w-2/3">
-      <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-password" type="password" placeholder="******************">
-    </div>
+  <div>
+    <input formControlName="user" type="text" placeholder="Introducir usaurio">
   </div>
-  <div class="md:flex md:items-center mb-6">
-    <div class="md:w-1/3"></div>
-    <label class="md:w-2/3 block text-gray-500 font-bold">
-      <input class="mr-2 leading-tight" type="checkbox">
-      <span class="text-sm">
-        Send me your newsletter!
-      </span>
-    </label>
+  <div>
+    <input formControlName="email" type="email" placeholder="Introducir email">
+    <div class="form-text-error" *ngIf="signupForm.get('email')?.hasError('email') && signupForm.get('email')?.touched">Introducir un email válido</div>
   </div>
-  <div class="md:flex md:items-center">
-    <div class="md:w-1/3"></div>
-    <div class="md:w-2/3">
-      <button class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-        Sign Up
-      </button>
-    </div>
+  <div>
+    <input formControlName="passw" type="password" placeholder="Introducir contraseña">
+  </div>
+  <div>
+    <button [disabled]="signupForm.invalid" type="submit" class="w-100">Registrarse</button>
   </div>
 </form>
-
-<div class="grid grid-rows-4 grid-flow-col gap-4">
-  <div>01</div>
-  <div>02</div>
-  <div>03</div>
-  <div>04</div>
-  <div>05</div>
-  <div>06</div>
-  <div>07</div>
-  <div>08</div>
-  <div>09</div>
-</div>
-
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
