--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -476,6 +476,11 @@
 <!-- Pruebas con componentes -->
 <mi-componente></mi-componente>
 <form-view></form-view>
+<subject></subject>
+<behaviour-subject></behaviour-subject>
+<replay-subject></replay-subject>
+
+
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
