--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -479,6 +479,7 @@
 <subject></subject>
 <behaviour-subject></behaviour-subject>
 <replay-subject></replay-subject>
+<search></search> <!-- (search)="handleSearch($event)" -->
 
 
 
