--- a/frontend/src/app/components/search/search.component.html
+++ b/frontend/src/app/components/search/search.component.html
@@ -1,3 +1,3 @@
 <mat-form-field>
-    <input [formControl]="search" matInput placeholder="Búsqueda" value="Sushi" />
+    <input [formControl]="search" spellcheck="false" autocomplete="off" matInput placeholder="Búsqueda" value="Sushi" />
 </mat-form-field>
