--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -484,15 +484,14 @@
 <ul>
   <li *ngFor="let usuario of usuarios | search:filtro_valor">{{ usuario.name }}</li>
 </ul>
-
  
 <app-header></app-header>
 
-
 <app-header-guard></app-header-guard>
 <router-outlet></router-outlet> 
--->
 
+<app-loader></app-loader>
+-->
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
